fix action bar z-index

--- a/Appy/Appy-frontend/src/app/components/action-bar/action-bar.component.scss
+++ b/Appy/Appy-frontend/src/app/components/action-bar/action-bar.component.scss
@@ -4,6 +4,7 @@
     margin-bottom: 20px;
     display: flex;
     gap: 10px;
+    z-index: 1;
 }
 
 .action-bar-spacer {
